fixed histogram not showing last bin + code polishing

--- a/react/src/components/HistoControlBar/HistoControlBar.css
+++ b/react/src/components/HistoControlBar/HistoControlBar.css
@@ -23,12 +23,12 @@
   .slider-group {
     display: flex;
     flex-direction: column;
-    flex-grow: 1; /* Make the slider grow to take available space */
+    flex-grow: 1; 
     align-items: flex-start;
   }
   
   .time-slider {
-    width: 100%; /* Make the slider fill the width of its container */
+    width: 100%; 
     height: 5px;
     background: #ddd;
     position: relative;
@@ -49,7 +49,7 @@
     justify-content: space-between;
     font-size: 16px;
     width: 100%;
-    margin-top: 5px;  /* Add some space between the slider and labels */
+    margin-top: 5px;  
   }
   
   .slider-labels .left {
@@ -70,6 +70,7 @@
     color: white;
     border: none;
     border-radius: 4px;
+    margin-top: 40px;
   }
 
   .custom-multi-select {
@@ -77,7 +78,7 @@
     border-radius: 5px;
     padding: 10px;
     max-height: 150px;
-    overflow-y: auto; /* Allows scrolling for long lists */
+    overflow-y: auto; 
     background-color: #f9f9f9;
   }
   
@@ -92,7 +93,7 @@
   }
   
   .multi-select-option:hover {
-    background-color: #e6f7ff; /* Light blue hover effect */
+    background-color: #e6f7ff; 
   }
   
   .multi-select-option input {
@@ -129,8 +130,8 @@
   }
   
   .bins-input input[type="number"]:focus {
-    border-color: #007bff; /* Add a blue border when focused */
-    box-shadow: 0 0 4px rgba(0, 123, 255, 0.3); /* Optional shadow for focus */
+    border-color: #007bff;
+    box-shadow: 0 0 4px rgba(0, 123, 255, 0.3); 
   }
   
   .bins-input input[type="number"]::placeholder {
@@ -139,12 +140,12 @@
   
   .bins-input input[type="number"]::-webkit-inner-spin-button,
   .bins-input input[type="number"]::-webkit-outer-spin-button {
-    -webkit-appearance: none; /* Hide the spin buttons */
+    -webkit-appearance: none;
     margin: 0;
   }
   
   .bins-input input[type="number"]:disabled {
-    background-color: #f9f9f9; /* Lighter background for disabled state */
+    background-color: #f9f9f9;
     color: #aaa;
     border-color: #ddd;
     cursor: not-allowed;
@@ -153,7 +154,7 @@
   .input-group-row {
     display: flex;
     align-items: center;
-    gap: 20px; /* Space between inputs */
+    gap: 20px; 
     margin: 10px 0;
   }
   
@@ -171,7 +172,7 @@
   }
   
   .bins-input input[type="number"], .ip-input input[type="text"] {
-    width: 150px; /* Adjust width for consistency */
+    width: 150px; 
     padding: 5px;
     border: 1px solid #ccc;
     border-radius: 4px;
@@ -182,8 +183,8 @@
   }
   
   .bins-input input:focus, .ip-input input:focus {
-    border-color: #007bff; /* Blue border on focus */
-    box-shadow: 0 0 4px rgba(0, 123, 255, 0.3); /* Focus shadow */
+    border-color: #007bff; 
+    box-shadow: 0 0 4px rgba(0, 123, 255, 0.3); 
   }
   
   .bins-input input::placeholder, .ip-input input::placeholder {
@@ -191,7 +192,7 @@
   }
   
   .bins-input input:disabled, .ip-input input:disabled {
-    background-color: #f9f9f9; /* Light background for disabled state */
+    background-color: #f9f9f9; 
     color: #aaa;
     border-color: #ddd;
     cursor: not-allowed;
@@ -224,6 +225,7 @@
   
   .show-all-services label {
     display: flex;
+    font-size: 14px;
     align-items: center;
   }
   
@@ -263,7 +265,7 @@
   }
 
   .switch-label input:checked + .slider {
-    background-color: #4CAF50; /* Green when checked */
+    background-color: #007bff; 
   }
 
   .switch-label .slider:before {
@@ -279,7 +281,7 @@
   }
 
   .switch-label input:checked + .slider:before {
-    transform: translateX(24px); /* Move the circle to the right */
+    transform: translateX(24px); 
   }
 
   /* Style for the "Source/Destination" label */
@@ -289,5 +291,5 @@
     color: #333;
     display: inline-block;
     vertical-align: middle;
-    font-weight: bold; /* Make the text bold */
+    font-weight: bold; 
   }
